# scrapper

./: .gitignore  README.md  main.py  pyproject.toml
config/: scraper.yaml
scrapper/: __init__.py  cli.py  downloader.py  exceptions.py  models.py  organizer.py  shell.py
scrapper/sources/: __init__.py  apple_music.py  audiomack.py  base.py  midi_db.py  registry.py  spotify.py  youtube.py
tests/test_scrapper/: test_cli.py  test_downloader.py  test_models.py  test_sources.py
